first k8s app workshop

--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -32,8 +32,8 @@
   <body>
     <div class="main" style="background: {{ .Color }};">
         <div class="wrapper">
-            <h1><i>{{or .Title "TITLE"}}</i></h1>
-            <p>{{or .Description "SET environment variables TITLE & DESCRIPTION to customize these."}}</p>
+            <h1><i>{{or .Title "Hello"}}</i></h1>
+            <p>{{or .Description "Welcome to my first kubernetes application workshop."}}</p>
         </div>
     </div>
   </body>
